tests/compiler/expected/output/StringLiteralAsPointer.shtk.txt
MODULE StringLiteralAsPointer.shtk
ERROR in Line 8 Col 10

    test("leh")
         ^
Type error, did not expect char[],
expected char*

StringLiteralAsPointer.shtk:8:9
